--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:zAgXMEglVMrG/mdblzqoRVlLjqMf7GYwpsUxYQPh8N8=
+APP_KEY=base64:xMs8RXVqzboa/JVJKJViPex3V3nGRj4QKI5z9nEFzlQ=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=texnikum
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=iival
+DB_USERNAME=bekmurod3388
+DB_PASSWORD=-C1HVVuq]SA31EHw
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
